ASoC: SOF: ipc4-pcm: fix delay calculation when DSP resamples (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -573,6 +573,7 @@
 	patches.kernel.org/6.17.3-501-ASoC-SOF-ipc3-topology-Fix-multi-core-and-stat.patch
 	patches.kernel.org/6.17.3-502-ASoC-codecs-wcd937x-set-the-comp-soundwire-por.patch
 	patches.kernel.org/6.17.3-503-ASoC-codecs-wcd937x-make-stub-functions-inline.patch
+	patches.kernel.org/6.17.3-504-ASoC-SOF-ipc4-pcm-fix-delay-calculation-when-D.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
