Fix CC_HAS_ASM_GOTO_OUTPUT on non-x86 architectures (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -74,6 +74,7 @@
 	patches.kernel.org/6.17.3-002-filelock-add-FL_RECLAIM-to-show_fl_flags-macro.patch
 	patches.kernel.org/6.17.3-003-init-INITRAMFS_PRESERVE_MTIME-should-depend-on.patch
 	patches.kernel.org/6.17.3-004-pid-use-ns_capable_noaudit-when-determining-ne.patch
+	patches.kernel.org/6.17.3-005-Fix-CC_HAS_ASM_GOTO_OUTPUT-on-non-x86-architec.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
