drm/amd/pm: Disable ULV even if unsupported (v3) (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -371,6 +371,7 @@
 	patches.kernel.org/6.17.3-299-coresight-Fix-missing-include-for-FIELD_GET.patch
 	patches.kernel.org/6.17.3-300-coresight-Only-register-perf-symlink-for-sinks.patch
 	patches.kernel.org/6.17.3-301-drm-amdgpu-Power-up-UVD-3-for-FW-validation-v2.patch
+	patches.kernel.org/6.17.3-302-drm-amd-pm-Disable-ULV-even-if-unsupported-v3.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
