leds: leds-lp55xx: Use correct address for memory programming (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -150,6 +150,7 @@
 	patches.kernel.org/6.17.3-078-selftests-futex-Fix-some-futex_numa_mpol-subte.patch
 	patches.kernel.org/6.17.3-079-tools-nolibc-avoid-error-in-dup2-if-old-fd-equ.patch
 	patches.kernel.org/6.17.3-080-selftests-nolibc-fix-EXPECT_NZ-macro.patch
+	patches.kernel.org/6.17.3-081-leds-leds-lp55xx-Use-correct-address-for-memor.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
