--- a/series.conf
+++ b/series.conf
@@ -445,6 +445,7 @@
 	patches.kernel.org/6.17.3-373-scsi-qla2xxx-Fix-incorrect-sign-of-error-code-.patch
 	patches.kernel.org/6.17.3-374-scsi-qla2xxx-Fix-incorrect-sign-of-error-code-.patch
 	patches.kernel.org/6.17.3-375-HID-hidraw-tighten-ioctl-command-parsing.patch
+	patches.kernel.org/6.17.3-376-f2fs-fix-zero-sized-extent-for-precache-extent.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
