--- a/series.conf
+++ b/series.conf
@@ -290,6 +290,7 @@
 	patches.kernel.org/6.17.3-218-drm-amdgpu-fix-link-error-for-PM_SLEEP.patch
 	patches.kernel.org/6.17.3-219-drm-amdgpu-Fix-jpeg-v4.0.3-poison-irq-call-tra.patch
 	patches.kernel.org/6.17.3-220-drm-amdgpu-Fix-vcn-v4.0.3-poison-irq-call-trac.patch
+	patches.kernel.org/6.17.3-221-PCI-endpoint-pci-ep-msi-Fix-NULL-vs-IS_ERR-che.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
