HID: steelseries: refactor probe() and remove() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -298,6 +298,7 @@
 	patches.kernel.org/6.17.3-226-f2fs-fix-to-zero-data-after-EOF-for-compressed.patch
 	patches.kernel.org/6.17.3-227-drm-bridge-it6505-select-REGMAP_I2C.patch
 	patches.kernel.org/6.17.3-228-wifi-rtw88-Lock-rtwdev-mutex-before-setting-th.patch
+	patches.kernel.org/6.17.3-229-HID-steelseries-refactor-probe-and-remove.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
