drm/msm: stop supporting no-IOMMU configuration (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -396,6 +396,7 @@
 	patches.kernel.org/6.17.3-324-drm-msm-Fix-missing-VM_BIND-offset-range-valid.patch
 	patches.kernel.org/6.17.3-325-wifi-iwlwifi-Remove-redundant-header-files.patch
 	patches.kernel.org/6.17.3-326-drm-msm-mdp4-stop-supporting-no-IOMMU-configur.patch
+	patches.kernel.org/6.17.3-327-drm-msm-stop-supporting-no-IOMMU-configuration.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
