iommu/vt-d: Disallow dirty tracking if incoherent page walk (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -514,6 +514,7 @@
 	patches.kernel.org/6.17.3-442-PCI-rcar-gen4-Assure-reset-occurs-before-DBI-a.patch
 	patches.kernel.org/6.17.3-443-PCI-rcar-gen4-Fix-inverted-break-condition-in-.patch
 	patches.kernel.org/6.17.3-444-ASoC-qcom-sc8280xp-use-sa8775p-subdir-for-QCS9.patch
+	patches.kernel.org/6.17.3-445-iommu-vt-d-Disallow-dirty-tracking-if-incohere.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
