--- a/series.conf
+++ b/series.conf
@@ -96,6 +96,7 @@
 	patches.kernel.org/6.17.3-024-uprobes-uprobe_warn-should-use-passed-task.patch
 	patches.kernel.org/6.17.3-025-raid6-riscv-Clean-up-unused-header-file-inclus.patch
 	patches.kernel.org/6.17.3-026-coresight-trbe-Prevent-overflow-in-PERF_IDX2OF.patch
+	patches.kernel.org/6.17.3-027-perf-arm_spe-Prevent-overflow-in-PERF_IDX2OFF.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
