--- a/series.conf
+++ b/series.conf
@@ -157,6 +157,7 @@
 	patches.kernel.org/6.17.3-085-dt-bindings-vendor-prefixes-Add-undocumented-v.patch
 	patches.kernel.org/6.17.3-086-genirq-test-Fix-depth-tests-on-architectures-w.patch
 	patches.kernel.org/6.17.3-087-genirq-test-Select-IRQ_DOMAIN.patch
+	patches.kernel.org/6.17.3-088-genirq-test-Depend-on-SPARSE_IRQ.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
