drm/amdgpu/vcn: Add regdump helper functions (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -347,6 +347,7 @@
 	patches.kernel.org/6.17.3-275-HID-i2c-hid-Fix-test-in-i2c_hid_core_register_.patch
 	patches.kernel.org/6.17.3-276-ALSA-lx_core-use-int-type-to-store-negative-er.patch
 	patches.kernel.org/6.17.3-277-media-st-delta-avoid-excessive-stack-usage.patch
+	patches.kernel.org/6.17.3-278-drm-amdgpu-vcn-Add-regdump-helper-functions.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
