--- a/series.conf
+++ b/series.conf
@@ -405,6 +405,7 @@
 	patches.kernel.org/6.17.3-333-ipv6-snmp-do-not-track-per-idev-ICMP6_MIB_RATE.patch
 	patches.kernel.org/6.17.3-334-drm-msm-Fix-bootup-splat-with-separate_gpu_drm.patch
 	patches.kernel.org/6.17.3-335-drm-msm-dpu-fix-incorrect-type-for-ret.patch
+	patches.kernel.org/6.17.3-336-wifi-mac80211-fix-reporting-of-all-valid-links.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
