smc: Fix use-after-free in __pnet_find_base_ndev() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -446,6 +446,7 @@
 	patches.kernel.org/6.17.3-374-scsi-qla2xxx-Fix-incorrect-sign-of-error-code-.patch
 	patches.kernel.org/6.17.3-375-HID-hidraw-tighten-ioctl-command-parsing.patch
 	patches.kernel.org/6.17.3-376-f2fs-fix-zero-sized-extent-for-precache-extent.patch
+	patches.kernel.org/6.17.3-377-smc-Fix-use-after-free-in-__pnet_find_base_nde.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
