hwrng: nomadik - add ARM_AMBA dependency (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -310,6 +310,7 @@
 	patches.kernel.org/6.17.3-238-drm-amd-display-Remove-redundant-semicolons.patch
 	patches.kernel.org/6.17.3-239-drm-amd-display-Add-NULL-pointer-checks-in-dc_.patch
 	patches.kernel.org/6.17.3-240-crypto-keembay-Add-missing-check-after-sg_nent.patch
+	patches.kernel.org/6.17.3-241-hwrng-nomadik-add-ARM_AMBA-dependency.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
