--- a/series.conf
+++ b/series.conf
@@ -622,6 +622,7 @@
 	patches.kernel.org/6.17.3-550-remoteproc-pru-Fix-potential-NULL-pointer-dere.patch
 	patches.kernel.org/6.17.3-551-PCI-endpoint-pci-epf-test-Add-NULL-check-for-D.patch
 	patches.kernel.org/6.17.3-552-thunderbolt-Fix-use-after-free-in-tb_dp_dprx_w.patch
+	patches.kernel.org/6.17.3-553-tee-fix-register_shm_helper.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
