HID: i2c-hid: Fix test in i2c_hid_core_register_panel_follower() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -344,6 +344,7 @@
 	patches.kernel.org/6.17.3-272-PCI-qcom-Restrict-port-parsing-only-to-PCIe-br.patch
 	patches.kernel.org/6.17.3-273-cdx-don-t-select-CONFIG_GENERIC_MSI_IRQ.patch
 	patches.kernel.org/6.17.3-274-PCI-ACPI-Fix-pci_acpi_preserve_config-memory-l.patch
+	patches.kernel.org/6.17.3-275-HID-i2c-hid-Fix-test-in-i2c_hid_core_register_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
