--- a/series.conf
+++ b/series.conf
@@ -303,6 +303,7 @@
 	patches.kernel.org/6.17.3-231-phy-rockchip-naneng-combphy-Enable-U3-OTG-port.patch
 	patches.kernel.org/6.17.3-232-drm-bridge-cdns-dsi-Fix-the-_atomic_check.patch
 	patches.kernel.org/6.17.3-233-usb-host-max3421-hcd-Fix-error-pointer-derefer.patch
+	patches.kernel.org/6.17.3-234-usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-thr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
