--- a/series.conf
+++ b/series.conf
@@ -547,6 +547,7 @@
 	patches.kernel.org/6.17.3-475-net-mlx5-pagealloc-Fix-reclaim-race-during-com.patch
 	patches.kernel.org/6.17.3-476-net-mlx5-fw-reset-add-reset-timeout-work.patch
 	patches.kernel.org/6.17.3-477-smb-client-fix-crypto-buffers-in-non-linear-me.patch
+	patches.kernel.org/6.17.3-478-bonding-fix-xfrm-offload-feature-setup-on-acti.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
