--- a/series.conf
+++ b/series.conf
@@ -119,6 +119,7 @@
 	patches.kernel.org/6.17.3-047-bpf-selftests-Fix-test_tcpnotify_user.patch
 	patches.kernel.org/6.17.3-048-bpf-Remove-migrate_disable-in-kprobe_multi_lin.patch
 	patches.kernel.org/6.17.3-049-libbpf-Fix-reuse-of-DEVMAP.patch
+	patches.kernel.org/6.17.3-050-tools-nolibc-fix-error-return-value-of-clock_n.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
