--- a/series.conf
+++ b/series.conf
@@ -552,6 +552,7 @@
 	patches.kernel.org/6.17.3-480-iommufd-Register-iommufd-mock-devices-with-fws.patch
 	patches.kernel.org/6.17.3-481-Revert-net-mlx5e-Update-and-set-Xon-Xoff-upon-.patch
 	patches.kernel.org/6.17.3-482-NFSD-filecache-add-STATX_DIOALIGN-and-STATX_DI.patch
+	patches.kernel.org/6.17.3-483-nfs-localio-avoid-issuing-misaligned-IO-using-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
