crypto: hisilicon - check the sva module status while enabling or disabling address prefetch (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -362,6 +362,7 @@
 	patches.kernel.org/6.17.3-290-ipv4-start-using-dst_dev_rcu.patch
 	patches.kernel.org/6.17.3-291-crypto-hisilicon-zip-remove-unnecessary-valida.patch
 	patches.kernel.org/6.17.3-292-crypto-hisilicon-re-enable-address-prefetch-af.patch
+	patches.kernel.org/6.17.3-293-crypto-hisilicon-check-the-sva-module-status-w.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
