--- a/series.conf
+++ b/series.conf
@@ -107,6 +107,7 @@
 	patches.kernel.org/6.17.3-035-selftests-cgroup-Make-test_pids-backwards-comp.patch
 	patches.kernel.org/6.17.3-036-sched-fair-Get-rid-of-sched_domains_curr_level.patch
 	patches.kernel.org/6.17.3-037-lsm-CONFIG_LSM-can-depend-on-CONFIG_SECURITY.patch
+	patches.kernel.org/6.17.3-038-cpuset-fix-failure-to-enable-isolated-partitio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
