bpf: Tidy verifier bug message (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -112,6 +112,7 @@
 	patches.kernel.org/6.17.3-040-btrfs-fix-symbolic-link-reading-when-bs-ps.patch
 	patches.kernel.org/6.17.3-041-pinctrl-renesas-rzg2l-Fix-invalid-unsigned-ret.patch
 	patches.kernel.org/6.17.3-042-arm64-dts-renesas-rzg2lc-smarc-Disable-CAN-FD-.patch
+	patches.kernel.org/6.17.3-043-bpf-Tidy-verifier-bug-message.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
