--- a/series.conf
+++ b/series.conf
@@ -226,6 +226,7 @@
 	patches.kernel.org/6.17.3-154-arm64-dts-allwinner-t527-orangepi-4a-hook-up-e.patch
 	patches.kernel.org/6.17.3-155-pwm-tiehrpwm-Don-t-drop-runtime-PM-reference-i.patch
 	patches.kernel.org/6.17.3-156-pwm-tiehrpwm-Make-code-comment-in-.free-more-u.patch
+	patches.kernel.org/6.17.3-157-pwm-tiehrpwm-Fix-various-off-by-one-errors-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
