--- a/series.conf
+++ b/series.conf
@@ -455,6 +455,7 @@
 	patches.kernel.org/6.17.3-383-mptcp-Use-__sk_dst_get-and-dst_dev_rcu-in-mptc.patch
 	patches.kernel.org/6.17.3-384-Revert-usb-xhci-Avoid-Stop-Endpoint-retry-loop.patch
 	patches.kernel.org/6.17.3-385-RDMA-core-Resolve-MAC-of-next-hop-device-witho.patch
+	patches.kernel.org/6.17.3-386-IB-sa-Fix-sa_local_svc_timeout_ms-read-race.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
