--- a/series.conf
+++ b/series.conf
@@ -314,6 +314,7 @@
 	patches.kernel.org/6.17.3-242-docs-iio-ad3552r-Fix-malformed-code-block-dire.patch
 	patches.kernel.org/6.17.3-243-fwctl-mlx5-Fix-memory-alloc-free-in-mlx5ctl_fw.patch
 	patches.kernel.org/6.17.3-244-scsi-pm80xx-Restore-support-for-expanders.patch
+	patches.kernel.org/6.17.3-245-scsi-pm80xx-Fix-array-index-out-of-of-bounds-o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
