--- a/series.conf
+++ b/series.conf
@@ -144,6 +144,7 @@
 	patches.kernel.org/6.17.3-072-pinctrl-meson-gxl-add-missing-i2c_d-pinmux.patch
 	patches.kernel.org/6.17.3-073-blk-mq-check-kobject-state_in_sysfs-before-del.patch
 	patches.kernel.org/6.17.3-074-selftests-futex-Remove-the-g-parameter-from-fu.patch
+	patches.kernel.org/6.17.3-075-ARM-at91-pm-fix-MCKx-restore-routine.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
