--- a/series.conf
+++ b/series.conf
@@ -442,6 +442,7 @@
 	patches.kernel.org/6.17.3-370-ALSA-pcm-Disable-bottom-softirqs-as-part-of-sp.patch
 	patches.kernel.org/6.17.3-371-ACPI-NFIT-Fix-incorrect-ndr_desc-being-reporte.patch
 	patches.kernel.org/6.17.3-372-scsi-qla2xxx-edif-Fix-incorrect-sign-of-error-.patch
+	patches.kernel.org/6.17.3-373-scsi-qla2xxx-Fix-incorrect-sign-of-error-code-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
