--- a/series.conf
+++ b/series.conf
@@ -297,6 +297,7 @@
 	patches.kernel.org/6.17.3-225-f2fs-fix-to-avoid-overflow-while-left-shift-op.patch
 	patches.kernel.org/6.17.3-226-f2fs-fix-to-zero-data-after-EOF-for-compressed.patch
 	patches.kernel.org/6.17.3-227-drm-bridge-it6505-select-REGMAP_I2C.patch
+	patches.kernel.org/6.17.3-228-wifi-rtw88-Lock-rtwdev-mutex-before-setting-th.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
