tick: Do not set device to detached state in tick_shutdown() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -179,6 +179,7 @@
 	patches.kernel.org/6.17.3-107-selftests-vDSO-vdso_test_abi-Correctly-skip-wh.patch
 	patches.kernel.org/6.17.3-108-irqchip-gic-v5-Fix-loop-in-gicv5_its_create_it.patch
 	patches.kernel.org/6.17.3-109-irqchip-gic-v5-Fix-error-handling-in-gicv5_its.patch
+	patches.kernel.org/6.17.3-110-tick-Do-not-set-device-to-detached-state-in-ti.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
