--- a/series.conf
+++ b/series.conf
@@ -350,6 +350,7 @@
 	patches.kernel.org/6.17.3-278-drm-amdgpu-vcn-Add-regdump-helper-functions.patch
 	patches.kernel.org/6.17.3-279-drm-amdgpu-vcn-Hold-pg_lock-before-vcn-power-o.patch
 	patches.kernel.org/6.17.3-280-drm-amdgpu-Check-vcn-state-before-profile-swit.patch
+	patches.kernel.org/6.17.3-281-accel-amdxdna-Use-int-instead-of-u32-to-store-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
