--- a/series.conf
+++ b/series.conf
@@ -240,6 +240,7 @@
 	patches.kernel.org/6.17.3-168-block-update-validation-of-atomic-writes-bound.patch
 	patches.kernel.org/6.17.3-169-block-fix-stacking-of-atomic-writes-when-atomi.patch
 	patches.kernel.org/6.17.3-170-selftests-watchdog-skip-ping-loop-if-WDIOF_KEE.patch
+	patches.kernel.org/6.17.3-171-selftests-kselftest_harness-Add-harness-selfte.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
