mm/ksm: fix flag-dropping behavior in ksm_madvise (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -600,6 +600,7 @@
 	patches.kernel.org/6.17.3-528-LoongArch-BPF-No-text_poke-for-kernel-text.patch
 	patches.kernel.org/6.17.3-529-LoongArch-BPF-Remove-duplicated-flags-check.patch
 	patches.kernel.org/6.17.3-530-LoongArch-BPF-Fix-uninitialized-symbol-retval_.patch
+	patches.kernel.org/6.17.3-531-mm-ksm-fix-flag-dropping-behavior-in-ksm_madvi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
