arm64: dts: allwinner: a527: cubie-a5e: Add ethernet PHY reset setting (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -201,6 +201,7 @@
 	patches.kernel.org/6.17.3-129-blk-mq-split-bitmap-grow-and-resize-case-in-bl.patch
 	patches.kernel.org/6.17.3-130-blk-mq-sched-add-new-parameter-nr_requests-in-.patch
 	patches.kernel.org/6.17.3-131-blk-mq-fix-potential-deadlock-while-nr_request.patch
+	patches.kernel.org/6.17.3-132-arm64-dts-allwinner-a527-cubie-a5e-Add-etherne.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
