thermal/drivers/qcom/lmh: Add missing IRQ includes (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -267,6 +267,7 @@
 	patches.kernel.org/6.17.3-195-hwmon-mlxreg-fan-Separate-methods-of-fan-setti.patch
 	patches.kernel.org/6.17.3-196-tools-nolibc-add-stdbool.h-to-nolibc-includes.patch
 	patches.kernel.org/6.17.3-197-thermal-drivers-qcom-Make-LMH-select-QCOM_SCM.patch
+	patches.kernel.org/6.17.3-198-thermal-drivers-qcom-lmh-Add-missing-IRQ-inclu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
