x86/vdso: Fix output operand size of RDPID (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -103,6 +103,7 @@
 	patches.kernel.org/6.17.3-031-EDAC-i10nm-Skip-DIMM-enumeration-on-a-disabled.patch
 	patches.kernel.org/6.17.3-032-perf-x86-intel-Use-early_initcall-to-hook-bts_.patch
 	patches.kernel.org/6.17.3-033-perf-x86-intel-Fix-IA32_PMC_x_CFG_B-MSRs-acces.patch
+	patches.kernel.org/6.17.3-034-x86-vdso-Fix-output-operand-size-of-RDPID.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
