--- a/series.conf
+++ b/series.conf
@@ -513,6 +513,7 @@
 	patches.kernel.org/6.17.3-441-PCI-rcar-gen4-Add-missing-1ms-delay-after-PWR-.patch
 	patches.kernel.org/6.17.3-442-PCI-rcar-gen4-Assure-reset-occurs-before-DBI-a.patch
 	patches.kernel.org/6.17.3-443-PCI-rcar-gen4-Fix-inverted-break-condition-in-.patch
+	patches.kernel.org/6.17.3-444-ASoC-qcom-sc8280xp-use-sa8775p-subdir-for-QCS9.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
