--- a/series.conf
+++ b/series.conf
@@ -354,6 +354,7 @@
 	patches.kernel.org/6.17.3-282-efi-Explain-OVMF-acronym-in-OVMF_DEBUG_LOG-hel.patch
 	patches.kernel.org/6.17.3-283-net-dst-introduce-dst-dev_rcu.patch
 	patches.kernel.org/6.17.3-284-ipv6-mcast-Add-ip6_mc_find_idev-helper.patch
+	patches.kernel.org/6.17.3-285-ipv6-start-using-dst_dev_rcu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
