drm/amd/display: Remove redundant semicolons (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -307,6 +307,7 @@
 	patches.kernel.org/6.17.3-235-PCI-pwrctrl-Fix-double-cleanup-on-devm_add_act.patch
 	patches.kernel.org/6.17.3-236-misc-pci_endpoint_test-Fix-array-underflow-in-.patch
 	patches.kernel.org/6.17.3-237-serial-max310x-Add-error-checking-in-probe.patch
+	patches.kernel.org/6.17.3-238-drm-amd-display-Remove-redundant-semicolons.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
