--- a/series.conf
+++ b/series.conf
@@ -342,6 +342,7 @@
 	patches.kernel.org/6.17.3-270-PCI-rcar-host-Pass-proper-IRQ-domain-to-generi.patch
 	patches.kernel.org/6.17.3-271-fuse-remove-unneeded-offset-assignment-when-fi.patch
 	patches.kernel.org/6.17.3-272-PCI-qcom-Restrict-port-parsing-only-to-PCIe-br.patch
+	patches.kernel.org/6.17.3-273-cdx-don-t-select-CONFIG_GENERIC_MSI_IRQ.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
