--- a/series.conf
+++ b/series.conf
@@ -545,6 +545,7 @@
 	patches.kernel.org/6.17.3-473-net-dlink-handle-copy_thresh-allocation-failur.patch
 	patches.kernel.org/6.17.3-474-net-mlx5-Stop-polling-for-command-response-if-.patch
 	patches.kernel.org/6.17.3-475-net-mlx5-pagealloc-Fix-reclaim-race-during-com.patch
+	patches.kernel.org/6.17.3-476-net-mlx5-fw-reset-add-reset-timeout-work.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
