net: ethtool: tsconfig: set command must provide a reply (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -503,6 +503,7 @@
 	patches.kernel.org/6.17.3-431-coresight-tpda-fix-the-logic-to-setup-the-elem.patch
 	patches.kernel.org/6.17.3-432-coresight-Fix-incorrect-handling-for-return-va.patch
 	patches.kernel.org/6.17.3-433-NFSv4.1-fix-backchannel-max_resp_sz-verificati.patch
+	patches.kernel.org/6.17.3-434-net-ethtool-tsconfig-set-command-must-provide-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
