--- a/series.conf
+++ b/series.conf
@@ -584,6 +584,7 @@
 	patches.kernel.org/6.17.3-512-tracing-Fix-race-condition-in-kprobe-initializ.patch
 	patches.kernel.org/6.17.3-513-tracing-Fix-wakeup-tracers-on-failure-of-acqui.patch
 	patches.kernel.org/6.17.3-514-tracing-Fix-irqoff-tracers-on-failure-of-acqui.patch
+	patches.kernel.org/6.17.3-515-tracing-Have-trace_marker-use-per-cpu-data-to-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
