--- a/series.conf
+++ b/series.conf
@@ -527,6 +527,7 @@
 	patches.kernel.org/6.17.3-455-Bluetooth-btintel_pcie-Refactor-Device-Coredum.patch
 	patches.kernel.org/6.17.3-456-Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-.patch
 	patches.kernel.org/6.17.3-457-Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_fre.patch
+	patches.kernel.org/6.17.3-458-Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
