--- a/series.conf
+++ b/series.conf
@@ -502,6 +502,7 @@
 	patches.kernel.org/6.17.3-430-coresight-trbe-Return-NULL-pointer-for-allocat.patch
 	patches.kernel.org/6.17.3-431-coresight-tpda-fix-the-logic-to-setup-the-elem.patch
 	patches.kernel.org/6.17.3-432-coresight-Fix-incorrect-handling-for-return-va.patch
+	patches.kernel.org/6.17.3-433-NFSv4.1-fix-backchannel-max_resp_sz-verificati.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
