wifi: ath12k: Fix peer lookup in ath12k_dp_mon_rx_deliver_msdu() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -477,6 +477,7 @@
 	patches.kernel.org/6.17.3-405-vfio-pds-replace-bitmap_free-with-vfree.patch
 	patches.kernel.org/6.17.3-406-crypto-comp-Use-same-definition-of-context-all.patch
 	patches.kernel.org/6.17.3-407-crypto-hisilicon-qm-set-NULL-to-qm-debug.qm_di.patch
+	patches.kernel.org/6.17.3-408-wifi-ath12k-Fix-peer-lookup-in-ath12k_dp_mon_r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
