usb: phy: twl6030: Fix incorrect type for ret (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -387,6 +387,7 @@
 	patches.kernel.org/6.17.3-315-tcp-fix-__tcp_close-to-only-send-RST-when-requ.patch
 	patches.kernel.org/6.17.3-316-fanotify-Validate-the-return-value-of-mnt_ns_f.patch
 	patches.kernel.org/6.17.3-317-drm-amdkfd-Fix-error-code-sign-for-EINVAL-in-s.patch
+	patches.kernel.org/6.17.3-318-usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
