--- a/series.conf
+++ b/series.conf
@@ -510,6 +510,7 @@
 	patches.kernel.org/6.17.3-438-scsi-ufs-core-Fix-data-race-in-CPU-latency-PM-.patch
 	patches.kernel.org/6.17.3-439-scsi-mpt3sas-Fix-crash-in-transport-port-remov.patch
 	patches.kernel.org/6.17.3-440-usb-vhci-hcd-Prevent-suspending-virtually-atta.patch
+	patches.kernel.org/6.17.3-441-PCI-rcar-gen4-Add-missing-1ms-delay-after-PWR-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
