srcu/tiny: Remove preempt_disable/enable() in srcu_gp_start_if_needed() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -432,6 +432,7 @@
 	patches.kernel.org/6.17.3-360-wifi-mt76-mt7915-fix-mt7981-pre-calibration.patch
 	patches.kernel.org/6.17.3-361-wifi-mt76-mt7996-remove-redundant-per-phy-mac8.patch
 	patches.kernel.org/6.17.3-362-ASoC-Intel-hda-sdw-bpt-set-persistent_buffer-f.patch
+	patches.kernel.org/6.17.3-363-srcu-tiny-Remove-preempt_disable-enable-in-src.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
