PM / devfreq: mtk-cci: Fix potential error pointer dereference in probe() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -168,6 +168,7 @@
 	patches.kernel.org/6.17.3-096-ARM-dts-ti-omap-am335x-baltos-Fix-ti-en-ck32k-.patch
 	patches.kernel.org/6.17.3-097-ARM-dts-ti-omap-omap3-devkit8000-lcd-Fix-ti-ke.patch
 	patches.kernel.org/6.17.3-098-ARM-dts-omap-am335x-cm-t335-Remove-unused-mcas.patch
+	patches.kernel.org/6.17.3-099-PM-devfreq-mtk-cci-Fix-potential-error-pointer.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
