--- a/series.conf
+++ b/series.conf
@@ -334,6 +334,7 @@
 	patches.kernel.org/6.17.3-262-media-i2c-vd55g1-Fix-duster-register-address.patch
 	patches.kernel.org/6.17.3-263-drm-panel-Allow-powering-on-panel-follower-aft.patch
 	patches.kernel.org/6.17.3-264-HID-i2c-hid-Make-elan-touch-controllers-power-.patch
+	patches.kernel.org/6.17.3-265-RDMA-mlx5-Better-estimate-max_qp_wr-to-reflect.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
