pps: fix warning in pps_register_cdev when register device fail (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -391,6 +391,7 @@
 	patches.kernel.org/6.17.3-319-usb-gadget-configfs-Correctly-set-use_os_strin.patch
 	patches.kernel.org/6.17.3-320-tty-n_gsm-Don-t-block-input-queue-by-waiting-M.patch
 	patches.kernel.org/6.17.3-321-misc-genwqe-Fix-incorrect-cmd-field-being-repo.patch
+	patches.kernel.org/6.17.3-322-pps-fix-warning-in-pps_register_cdev-when-regi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
