ASoC: Intel: bytcht_es8316: Fix invalid quirk input mapping (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -398,6 +398,7 @@
 	patches.kernel.org/6.17.3-326-drm-msm-mdp4-stop-supporting-no-IOMMU-configur.patch
 	patches.kernel.org/6.17.3-327-drm-msm-stop-supporting-no-IOMMU-configuration.patch
 	patches.kernel.org/6.17.3-328-idpf-fix-Rx-descriptor-ready-check-barrier-in-.patch
+	patches.kernel.org/6.17.3-329-ASoC-Intel-bytcht_es8316-Fix-invalid-quirk-inp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
