--- a/series.conf
+++ b/series.conf
@@ -515,6 +515,7 @@
 	patches.kernel.org/6.17.3-443-PCI-rcar-gen4-Fix-inverted-break-condition-in-.patch
 	patches.kernel.org/6.17.3-444-ASoC-qcom-sc8280xp-use-sa8775p-subdir-for-QCS9.patch
 	patches.kernel.org/6.17.3-445-iommu-vt-d-Disallow-dirty-tracking-if-incohere.patch
+	patches.kernel.org/6.17.3-446-iommu-selftest-prevent-use-of-uninitialized-va.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
