blk-mq: check invalid nr_requests in queue_requests_store() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -195,6 +195,7 @@
 	patches.kernel.org/6.17.3-123-block-skip-unnecessary-checks-for-split-bio.patch
 	patches.kernel.org/6.17.3-124-block-fix-ordering-of-recursive-split-IO.patch
 	patches.kernel.org/6.17.3-125-blk-mq-remove-useless-checkings-in-blk_mq_upda.patch
+	patches.kernel.org/6.17.3-126-blk-mq-check-invalid-nr_requests-in-queue_requ.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
