tty: n_gsm: Don't block input queue by waiting MSC (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -389,6 +389,7 @@
 	patches.kernel.org/6.17.3-317-drm-amdkfd-Fix-error-code-sign-for-EINVAL-in-s.patch
 	patches.kernel.org/6.17.3-318-usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
 	patches.kernel.org/6.17.3-319-usb-gadget-configfs-Correctly-set-use_os_strin.patch
+	patches.kernel.org/6.17.3-320-tty-n_gsm-Don-t-block-input-queue-by-waiting-M.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
