--- a/series.conf
+++ b/series.conf
@@ -247,6 +247,7 @@
 	patches.kernel.org/6.17.3-175-selftests-futex-Fix-futex_wait-for-32bit-ARM.patch
 	patches.kernel.org/6.17.3-176-selftest-futex-Make-the-error-check-more-preci.patch
 	patches.kernel.org/6.17.3-177-selftest-futex-Compile-also-with-libnuma-2.0.1.patch
+	patches.kernel.org/6.17.3-178-bpf-dont-report-verifier-bug-for-missing-bpf_s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
