--- a/series.conf
+++ b/series.conf
@@ -590,6 +590,7 @@
 	patches.kernel.org/6.17.3-518-dm-fix-queue-start-stop-imbalance-under-suspen.patch
 	patches.kernel.org/6.17.3-519-dm-fix-NULL-pointer-dereference-in-__dm_suspen.patch
 	patches.kernel.org/6.17.3-520-LoongArch-Automatically-disable-kaslr-if-boot-.patch
+	patches.kernel.org/6.17.3-521-pwm-loongson-Fix-LOONGSON_PWM_FREQ_DEFAULT.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
