--- a/series.conf
+++ b/series.conf
@@ -208,6 +208,7 @@
 	patches.kernel.org/6.17.3-136-arm64-dts-rockchip-Fix-network-on-rk3576-evb1-.patch
 	patches.kernel.org/6.17.3-137-arm64-dts-ti-k3-j742s2-mcu-wakeup-Override-fir.patch
 	patches.kernel.org/6.17.3-138-arm64-dts-ti-k3-Rename-rproc-reserved-mem-node.patch
+	patches.kernel.org/6.17.3-139-Revert-arm64-dts-ti-k3-j721e-sk-Fix-reversed-C.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
