ACPICA: Fix largest possible resource descriptor index (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -229,6 +229,7 @@
 	patches.kernel.org/6.17.3-157-pwm-tiehrpwm-Fix-various-off-by-one-errors-in-.patch
 	patches.kernel.org/6.17.3-158-pwm-tiehrpwm-Fix-corner-case-in-clock-divisor-.patch
 	patches.kernel.org/6.17.3-159-ACPICA-Apply-ACPI_NONSTRING.patch
+	patches.kernel.org/6.17.3-160-ACPICA-Fix-largest-possible-resource-descripto.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
