drm/panel: novatek-nt35560: Fix invalid return value (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -286,6 +286,7 @@
 	patches.kernel.org/6.17.3-214-drm-panel-edp-Add-50ms-disable-delay-for-four-.patch
 	patches.kernel.org/6.17.3-215-drm-vmwgfx-fix-missing-assignment-to-ts.patch
 	patches.kernel.org/6.17.3-216-drm-amd-display-Reduce-Stack-Usage-by-moving-a.patch
+	patches.kernel.org/6.17.3-217-drm-panel-novatek-nt35560-Fix-invalid-return-v.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
