--- a/series.conf
+++ b/series.conf
@@ -287,6 +287,7 @@
 	patches.kernel.org/6.17.3-215-drm-vmwgfx-fix-missing-assignment-to-ts.patch
 	patches.kernel.org/6.17.3-216-drm-amd-display-Reduce-Stack-Usage-by-moving-a.patch
 	patches.kernel.org/6.17.3-217-drm-panel-novatek-nt35560-Fix-invalid-return-v.patch
+	patches.kernel.org/6.17.3-218-drm-amdgpu-fix-link-error-for-PM_SLEEP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
