arch: copy_thread: pass clone_flags as u64 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -70,6 +70,7 @@
 	patches.kernel.org/6.17.2-025-f2fs-fix-to-do-sanity-check-on-node-footer-for.patch
 	patches.kernel.org/6.17.2-026-ring-buffer-Propagate-__rb_map_vma-return-valu.patch
 	patches.kernel.org/6.17.2-027-Linux-6.17.2.patch
+	patches.kernel.org/6.17.3-001-arch-copy_thread-pass-clone_flags-as-u64.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
