i2c: spacemit: ensure SDA is released after bus reset (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -273,6 +273,7 @@
 	patches.kernel.org/6.17.3-201-i2c-spacemit-remove-stop-function-to-avoid-bus.patch
 	patches.kernel.org/6.17.3-202-i2c-spacemit-disable-SDA-glitch-fix-to-avoid-r.patch
 	patches.kernel.org/6.17.3-203-i2c-spacemit-check-SDA-instead-of-SCL-after-bu.patch
+	patches.kernel.org/6.17.3-204-i2c-spacemit-ensure-SDA-is-released-after-bus-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
