--- a/series.conf
+++ b/series.conf
@@ -420,6 +420,7 @@
 	patches.kernel.org/6.17.3-348-watchdog-mpc8xxx_wdt-Reload-the-watchdog-timer.patch
 	patches.kernel.org/6.17.3-349-PCI-endpoint-pci-epf-test-Fix-doorbell-test-su.patch
 	patches.kernel.org/6.17.3-350-drivers-base-node-handle-error-properly-in-reg.patch
+	patches.kernel.org/6.17.3-351-RDMA-cm-Rate-limit-destroy-CM-ID-timeout-error.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
