ksmbd: fix error code overwriting in smb2_get_info_filesystem() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -602,6 +602,7 @@
 	patches.kernel.org/6.17.3-530-LoongArch-BPF-Fix-uninitialized-symbol-retval_.patch
 	patches.kernel.org/6.17.3-531-mm-ksm-fix-flag-dropping-behavior-in-ksm_madvi.patch
 	patches.kernel.org/6.17.3-532-ksmbd-Fix-race-condition-in-RPC-handle-list-ac.patch
+	patches.kernel.org/6.17.3-533-ksmbd-fix-error-code-overwriting-in-smb2_get_i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
