gfs2: Get rid of GLF_INVALIDATE_IN_PROGRESS (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -86,6 +86,7 @@
 	patches.kernel.org/6.17.3-014-gfs2-Further-sanitize-lock_dlm.c.patch
 	patches.kernel.org/6.17.3-015-gfs2-Fix-LM_FLAG_TRY-logic-in-add_to_queue.patch
 	patches.kernel.org/6.17.3-016-gfs2-Remove-duplicate-check-in-do_xmote.patch
+	patches.kernel.org/6.17.3-017-gfs2-Get-rid-of-GLF_INVALIDATE_IN_PROGRESS.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
