arm64: dts: rockchip: Fix network on rk3576 evb1 board (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -205,6 +205,7 @@
 	patches.kernel.org/6.17.3-133-arm64-dts-allwinner-t527-avaota-a1-Add-etherne.patch
 	patches.kernel.org/6.17.3-134-arm64-dts-rockchip-Add-RTC-on-rk3576-evb1-v10.patch
 	patches.kernel.org/6.17.3-135-arm64-dts-rockchip-Add-WiFi-on-rk3576-evb1-v10.patch
+	patches.kernel.org/6.17.3-136-arm64-dts-rockchip-Fix-network-on-rk3576-evb1-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
