drm/vmwgfx: fix missing assignment to ts (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -284,6 +284,7 @@
 	patches.kernel.org/6.17.3-212-drm-panel-edp-Add-disable-to-100ms-for-MNB601L.patch
 	patches.kernel.org/6.17.3-213-drm-display-bridge-connector-correct-CEC-bridg.patch
 	patches.kernel.org/6.17.3-214-drm-panel-edp-Add-50ms-disable-delay-for-four-.patch
+	patches.kernel.org/6.17.3-215-drm-vmwgfx-fix-missing-assignment-to-ts.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
