mfd: max77705: Setup the core driver as an interrupt controller (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -279,6 +279,7 @@
 	patches.kernel.org/6.17.3-207-libbpf-Fix-error-when-st-prefix_ops-and-ops-fr.patch
 	patches.kernel.org/6.17.3-208-bpf-Enforce-expected_attach_type-for-tailcall-.patch
 	patches.kernel.org/6.17.3-209-i3c-fix-big-endian-FIFO-transfers.patch
+	patches.kernel.org/6.17.3-210-mfd-max77705-Setup-the-core-driver-as-an-inter.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
