uprobes: uprobe_warn should use passed task (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -93,6 +93,7 @@
 	patches.kernel.org/6.17.3-021-powerpc-603-Really-copy-kernel-PGD-entries-int.patch
 	patches.kernel.org/6.17.3-022-powerpc-ftrace-ensure-ftrace-record-ops-are-al.patch
 	patches.kernel.org/6.17.3-023-powerpc64-modules-correctly-iterate-over-stubs.patch
+	patches.kernel.org/6.17.3-024-uprobes-uprobe_warn-should-use-passed-task.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
