--- a/series.conf
+++ b/series.conf
@@ -489,6 +489,7 @@
 	patches.kernel.org/6.17.3-417-remoteproc-qcom-pas-Shutdown-lite-ADSP-DTB-on-.patch
 	patches.kernel.org/6.17.3-418-wifi-ath12k-Refactor-RX-TID-deletion-handling-.patch
 	patches.kernel.org/6.17.3-419-wifi-ath12k-Fix-flush-cache-failure-during-RX-.patch
+	patches.kernel.org/6.17.3-420-wifi-cfg80211-fix-width-unit-in-cfg80211_radio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
