ALSA: hda/realtek: Add quirk for HP Spectre 14t-ea100 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -563,6 +563,7 @@
 	patches.kernel.org/6.17.3-491-bpf-Reject-negative-offsets-for-ALU-ops.patch
 	patches.kernel.org/6.17.3-492-tpm-Disable-TPM2_TCG_HMAC-by-default.patch
 	patches.kernel.org/6.17.3-493-ALSA-hda-hdmi-Add-pin-fix-for-HP-ProDesk-model.patch
+	patches.kernel.org/6.17.3-494-ALSA-hda-realtek-Add-quirk-for-HP-Spectre-14t-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
