--- a/series.conf
+++ b/series.conf
@@ -194,6 +194,7 @@
 	patches.kernel.org/6.17.3-122-block-factor-out-a-helper-bio_submit_split_bio.patch
 	patches.kernel.org/6.17.3-123-block-skip-unnecessary-checks-for-split-bio.patch
 	patches.kernel.org/6.17.3-124-block-fix-ordering-of-recursive-split-IO.patch
+	patches.kernel.org/6.17.3-125-blk-mq-remove-useless-checkings-in-blk_mq_upda.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
