--- a/series.conf
+++ b/series.conf
@@ -487,6 +487,7 @@
 	patches.kernel.org/6.17.3-415-PCI-tegra194-Fix-duplicate-PLL-disable-in-pex_.patch
 	patches.kernel.org/6.17.3-416-remoteproc-qcom-q6v5-Avoid-disabling-handover-.patch
 	patches.kernel.org/6.17.3-417-remoteproc-qcom-pas-Shutdown-lite-ADSP-DTB-on-.patch
+	patches.kernel.org/6.17.3-418-wifi-ath12k-Refactor-RX-TID-deletion-handling-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
