--- a/series.conf
+++ b/series.conf
@@ -593,6 +593,7 @@
 	patches.kernel.org/6.17.3-521-pwm-loongson-Fix-LOONGSON_PWM_FREQ_DEFAULT.patch
 	patches.kernel.org/6.17.3-522-LoongArch-BPF-Sign-extend-struct-ops-return-va.patch
 	patches.kernel.org/6.17.3-523-LoongArch-BPF-No-support-of-struct-argument-in.patch
+	patches.kernel.org/6.17.3-524-LoongArch-BPF-Don-t-align-trampoline-size.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
