--- a/series.conf
+++ b/series.conf
@@ -83,6 +83,7 @@
 	patches.kernel.org/6.17.3-011-hfsplus-fix-slab-out-of-bounds-read-in-hfsplus.patch
 	patches.kernel.org/6.17.3-012-gfs2-Fix-GLF_INVALIDATE_IN_PROGRESS-flag-clear.patch
 	patches.kernel.org/6.17.3-013-gfs2-Remove-space-before-newline.patch
+	patches.kernel.org/6.17.3-014-gfs2-Further-sanitize-lock_dlm.c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
