--- a/series.conf
+++ b/series.conf
@@ -340,6 +340,7 @@
 	patches.kernel.org/6.17.3-268-net-phy-introduce-phy_id_compare_vendor-PHY-ID.patch
 	patches.kernel.org/6.17.3-269-net-phy-as21xxx-better-handle-PHY-HW-reset-on-.patch
 	patches.kernel.org/6.17.3-270-PCI-rcar-host-Pass-proper-IRQ-domain-to-generi.patch
+	patches.kernel.org/6.17.3-271-fuse-remove-unneeded-offset-assignment-when-fi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
