--- a/series.conf
+++ b/series.conf
@@ -156,6 +156,7 @@
 	patches.kernel.org/6.17.3-084-ARM-dts-stm32-stm32mp151c-plyaqm-Use-correct-d.patch
 	patches.kernel.org/6.17.3-085-dt-bindings-vendor-prefixes-Add-undocumented-v.patch
 	patches.kernel.org/6.17.3-086-genirq-test-Fix-depth-tests-on-architectures-w.patch
+	patches.kernel.org/6.17.3-087-genirq-test-Select-IRQ_DOMAIN.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
