fbdev: simplefb: Fix use after free in simplefb_detach_genpds() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -607,6 +607,7 @@
 	patches.kernel.org/6.17.3-535-ext4-fix-potential-null-deref-in-ext4_mb_init.patch
 	patches.kernel.org/6.17.3-536-ext4-fix-checks-for-orphan-inodes.patch
 	patches.kernel.org/6.17.3-537-KVM-SVM-Skip-fastpath-emulation-on-VM-Exit-if-.patch
+	patches.kernel.org/6.17.3-538-fbdev-simplefb-Fix-use-after-free-in-simplefb_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
