coresight: trbe: Return NULL pointer for allocation failures (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -499,6 +499,7 @@
 	patches.kernel.org/6.17.3-427-coresight-Appropriately-disable-programming-cl.patch
 	patches.kernel.org/6.17.3-428-coresight-Appropriately-disable-trace-bus-cloc.patch
 	patches.kernel.org/6.17.3-429-coresight-Avoid-enable-programming-clock-dupli.patch
+	patches.kernel.org/6.17.3-430-coresight-trbe-Return-NULL-pointer-for-allocat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
