--- a/series.conf
+++ b/series.conf
@@ -254,6 +254,7 @@
 	patches.kernel.org/6.17.3-182-arm64-dts-apple-Add-ethernet0-alias-for-J375-t.patch
 	patches.kernel.org/6.17.3-183-selftests-always-install-UAPI-headers-to-the-c.patch
 	patches.kernel.org/6.17.3-184-smp-Fix-up-and-expand-the-smp_call_function_ma.patch
+	patches.kernel.org/6.17.3-185-mfd-max77705-max77705_charger-move-active-disc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
