--- a/series.conf
+++ b/series.conf
@@ -280,6 +280,7 @@
 	patches.kernel.org/6.17.3-208-bpf-Enforce-expected_attach_type-for-tailcall-.patch
 	patches.kernel.org/6.17.3-209-i3c-fix-big-endian-FIFO-transfers.patch
 	patches.kernel.org/6.17.3-210-mfd-max77705-Setup-the-core-driver-as-an-inter.patch
+	patches.kernel.org/6.17.3-211-drm-sched-Fix-a-race-in-DRM_GPU_SCHED_STAT_NO_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
