powerpc/ftrace: ensure ftrace record ops are always set for NOPs (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -91,6 +91,7 @@
 	patches.kernel.org/6.17.3-019-gfs2-Add-proper-lockspace-locking.patch
 	patches.kernel.org/6.17.3-020-powerpc-8xx-Remove-left-over-instruction-and-c.patch
 	patches.kernel.org/6.17.3-021-powerpc-603-Really-copy-kernel-PGD-entries-int.patch
+	patches.kernel.org/6.17.3-022-powerpc-ftrace-ensure-ftrace-record-ops-are-al.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
