serial: max310x: Add error checking in probe() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -306,6 +306,7 @@
 	patches.kernel.org/6.17.3-234-usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-thr.patch
 	patches.kernel.org/6.17.3-235-PCI-pwrctrl-Fix-double-cleanup-on-devm_add_act.patch
 	patches.kernel.org/6.17.3-236-misc-pci_endpoint_test-Fix-array-underflow-in-.patch
+	patches.kernel.org/6.17.3-237-serial-max310x-Add-error-checking-in-probe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
