PCI/ACPI: Fix pci_acpi_preserve_config() memory leak (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -343,6 +343,7 @@
 	patches.kernel.org/6.17.3-271-fuse-remove-unneeded-offset-assignment-when-fi.patch
 	patches.kernel.org/6.17.3-272-PCI-qcom-Restrict-port-parsing-only-to-PCIe-br.patch
 	patches.kernel.org/6.17.3-273-cdx-don-t-select-CONFIG_GENERIC_MSI_IRQ.patch
+	patches.kernel.org/6.17.3-274-PCI-ACPI-Fix-pci_acpi_preserve_config-memory-l.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
