selftests: vDSO: Fix -Wunitialized in powerpc VDSO_CALL() wrapper (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -175,6 +175,7 @@
 	patches.kernel.org/6.17.3-103-pinctrl-eswin-Fix-regulator-error-check-and-Kc.patch
 	patches.kernel.org/6.17.3-104-null_blk-Fix-the-description-of-the-cache_size.patch
 	patches.kernel.org/6.17.3-105-blk-throttle-fix-access-race-during-throttle-p.patch
+	patches.kernel.org/6.17.3-106-selftests-vDSO-Fix-Wunitialized-in-powerpc-VDS.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
