--- a/series.conf
+++ b/series.conf
@@ -348,6 +348,7 @@
 	patches.kernel.org/6.17.3-276-ALSA-lx_core-use-int-type-to-store-negative-er.patch
 	patches.kernel.org/6.17.3-277-media-st-delta-avoid-excessive-stack-usage.patch
 	patches.kernel.org/6.17.3-278-drm-amdgpu-vcn-Add-regdump-helper-functions.patch
+	patches.kernel.org/6.17.3-279-drm-amdgpu-vcn-Hold-pg_lock-before-vcn-power-o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
