--- a/series.conf
+++ b/series.conf
@@ -440,6 +440,7 @@
 	patches.kernel.org/6.17.3-368-f2fs-fix-to-mitigate-overhead-of-f2fs_zero_pos.patch
 	patches.kernel.org/6.17.3-369-RISC-V-KVM-Write-hgatp-register-with-valid-mod.patch
 	patches.kernel.org/6.17.3-370-ALSA-pcm-Disable-bottom-softirqs-as-part-of-sp.patch
+	patches.kernel.org/6.17.3-371-ACPI-NFIT-Fix-incorrect-ndr_desc-being-reporte.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
