--- a/series.conf
+++ b/series.conf
@@ -177,6 +177,7 @@
 	patches.kernel.org/6.17.3-105-blk-throttle-fix-access-race-during-throttle-p.patch
 	patches.kernel.org/6.17.3-106-selftests-vDSO-Fix-Wunitialized-in-powerpc-VDS.patch
 	patches.kernel.org/6.17.3-107-selftests-vDSO-vdso_test_abi-Correctly-skip-wh.patch
+	patches.kernel.org/6.17.3-108-irqchip-gic-v5-Fix-loop-in-gicv5_its_create_it.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
