--- a/series.conf
+++ b/series.conf
@@ -629,6 +629,7 @@
 	patches.kernel.org/6.17.3-557-net-usb-asix-hold-PM-usage-ref-to-avoid-PM-MDI.patch
 	patches.kernel.org/6.17.3-558-usb-typec-tipd-Clear-interrupts-first.patch
 	patches.kernel.org/6.17.3-559-arm64-dts-qcom-qcm2290-Disable-USB-SS-bus-inst.patch
+	patches.kernel.org/6.17.3-560-usb-cdns3-cdnsp-pci-remove-redundant-pci_disab.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
