ARM: dts: renesas: porter: Fix CAN pin group (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -120,6 +120,7 @@
 	patches.kernel.org/6.17.3-048-bpf-Remove-migrate_disable-in-kprobe_multi_lin.patch
 	patches.kernel.org/6.17.3-049-libbpf-Fix-reuse-of-DEVMAP.patch
 	patches.kernel.org/6.17.3-050-tools-nolibc-fix-error-return-value-of-clock_n.patch
+	patches.kernel.org/6.17.3-051-ARM-dts-renesas-porter-Fix-CAN-pin-group.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
