--- a/series.conf
+++ b/series.conf
@@ -414,6 +414,7 @@
 	patches.kernel.org/6.17.3-342-tools-ynl-fix-undefined-variable-name.patch
 	patches.kernel.org/6.17.3-343-RDMA-mlx5-Fix-page-size-bitmap-calculation-for.patch
 	patches.kernel.org/6.17.3-344-netfilter-ipset-Remove-unused-htable_bits-in-m.patch
+	patches.kernel.org/6.17.3-345-ipvs-Use-READ_ONCE-WRITE_ONCE-for-ipvs-enable.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
