--- a/series.conf
+++ b/series.conf
@@ -325,6 +325,7 @@
 	patches.kernel.org/6.17.3-253-f2fs-fix-to-avoid-NULL-pointer-dereference-in-.patch
 	patches.kernel.org/6.17.3-254-f2fs-fix-to-allow-removing-qf_name.patch
 	patches.kernel.org/6.17.3-255-drm-dp-drm_edp_backlight_set_level-do-not-alwa.patch
+	patches.kernel.org/6.17.3-256-crypto-octeontx2-Call-strscpy-with-correct-siz.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
