--- a/series.conf
+++ b/series.conf
@@ -73,6 +73,7 @@
 	patches.kernel.org/6.17.3-001-arch-copy_thread-pass-clone_flags-as-u64.patch
 	patches.kernel.org/6.17.3-002-filelock-add-FL_RECLAIM-to-show_fl_flags-macro.patch
 	patches.kernel.org/6.17.3-003-init-INITRAMFS_PRESERVE_MTIME-should-depend-on.patch
+	patches.kernel.org/6.17.3-004-pid-use-ns_capable_noaudit-when-determining-ne.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
