--- a/series.conf
+++ b/series.conf
@@ -217,6 +217,7 @@
 	patches.kernel.org/6.17.3-145-arm64-dts-mediatek-mt6331-Fix-pmic-regulators-.patch
 	patches.kernel.org/6.17.3-146-mmc-core-Fix-variable-shadowing-in-mmc_route_r.patch
 	patches.kernel.org/6.17.3-147-arm64-dts-mediatek-mt6795-xperia-m5-Fix-mmc0-l.patch
+	patches.kernel.org/6.17.3-148-arm64-dts-mediatek-mt7986a-Fix-PCI-Express-T-P.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
