tpm: Disable TPM2_TCG_HMAC by default (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -561,6 +561,7 @@
 	patches.kernel.org/6.17.3-489-selftests-bpf-Fix-realloc-size-in-bpf_get_addr.patch
 	patches.kernel.org/6.17.3-490-bpf-Skip-scalar-adjustment-for-BPF_NEG-if-dst-.patch
 	patches.kernel.org/6.17.3-491-bpf-Reject-negative-offsets-for-ALU-ops.patch
+	patches.kernel.org/6.17.3-492-tpm-Disable-TPM2_TCG_HMAC-by-default.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
