--- a/series.conf
+++ b/series.conf
@@ -211,6 +211,7 @@
 	patches.kernel.org/6.17.3-139-Revert-arm64-dts-ti-k3-j721e-sk-Fix-reversed-C.patch
 	patches.kernel.org/6.17.3-140-Revert-arm64-dts-ti-k3-j721e-beagleboneai64-Fi.patch
 	patches.kernel.org/6.17.3-141-arm64-dts-mediatek-mt8188-Change-efuse-fallbac.patch
+	patches.kernel.org/6.17.3-142-arm64-dts-mediatek-mt8186-tentacruel-Fix-touch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
