--- a/series.conf
+++ b/series.conf
@@ -123,6 +123,7 @@
 	patches.kernel.org/6.17.3-051-ARM-dts-renesas-porter-Fix-CAN-pin-group.patch
 	patches.kernel.org/6.17.3-052-leds-max77705-Function-return-instead-of-varia.patch
 	patches.kernel.org/6.17.3-053-leds-flash-leds-qcom-flash-Update-torch-curren.patch
+	patches.kernel.org/6.17.3-054-s390-bpf-Do-not-write-tail-call-counter-into-h.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
