arm64: dts: renesas: sparrow-hawk: Set VDDQ18_25_AVB voltage on EVTB1 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -128,6 +128,7 @@
 	patches.kernel.org/6.17.3-056-s390-bpf-Write-back-tail-call-counter-for-BPF_.patch
 	patches.kernel.org/6.17.3-057-cpufreq-scmi-Account-for-malformed-DT-in-scmi_.patch
 	patches.kernel.org/6.17.3-058-arm64-dts-renesas-sparrow-hawk-Invert-microSD-.patch
+	patches.kernel.org/6.17.3-059-arm64-dts-renesas-sparrow-hawk-Set-VDDQ18_25_A.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
