--- a/series.conf
+++ b/series.conf
@@ -90,6 +90,7 @@
 	patches.kernel.org/6.17.3-018-gfs2-do_xmote-cleanup.patch
 	patches.kernel.org/6.17.3-019-gfs2-Add-proper-lockspace-locking.patch
 	patches.kernel.org/6.17.3-020-powerpc-8xx-Remove-left-over-instruction-and-c.patch
+	patches.kernel.org/6.17.3-021-powerpc-603-Really-copy-kernel-PGD-entries-int.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
