--- a/series.conf
+++ b/series.conf
@@ -301,6 +301,7 @@
 	patches.kernel.org/6.17.3-229-HID-steelseries-refactor-probe-and-remove.patch
 	patches.kernel.org/6.17.3-230-media-zoran-Remove-zoran_fh-structure.patch
 	patches.kernel.org/6.17.3-231-phy-rockchip-naneng-combphy-Enable-U3-OTG-port.patch
+	patches.kernel.org/6.17.3-232-drm-bridge-cdns-dsi-Fix-the-_atomic_check.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
