- lsm: CONFIG_LSM can depend on CONFIG_SECURITY (bsc#1012628). - Update config files.

--- a/series.conf
+++ b/series.conf
@@ -106,6 +106,7 @@
 	patches.kernel.org/6.17.3-034-x86-vdso-Fix-output-operand-size-of-RDPID.patch
 	patches.kernel.org/6.17.3-035-selftests-cgroup-Make-test_pids-backwards-comp.patch
 	patches.kernel.org/6.17.3-036-sched-fair-Get-rid-of-sched_domains_curr_level.patch
+	patches.kernel.org/6.17.3-037-lsm-CONFIG_LSM-can-depend-on-CONFIG_SECURITY.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
