--- a/series.conf
+++ b/series.conf
@@ -185,6 +185,7 @@
 	patches.kernel.org/6.17.3-113-nbd-restrict-sockets-to-TCP-and-UDP.patch
 	patches.kernel.org/6.17.3-114-PM-devfreq-rockchip-dfi-double-count-on-RK3588.patch
 	patches.kernel.org/6.17.3-115-firmware-firmware-meson-sm-fix-compile-test-de.patch
+	patches.kernel.org/6.17.3-116-dts-arm-amlogic-fix-pwm-node-for-c3.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
