netfilter: nfnetlink: reset nlh pointer during batch replay (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -505,6 +505,7 @@
 	patches.kernel.org/6.17.3-433-NFSv4.1-fix-backchannel-max_resp_sz-verificati.patch
 	patches.kernel.org/6.17.3-434-net-ethtool-tsconfig-set-command-must-provide-.patch
 	patches.kernel.org/6.17.3-435-ipvs-Defer-ip_vs_ftp-unregister-during-netns-c.patch
+	patches.kernel.org/6.17.3-436-netfilter-nfnetlink-reset-nlh-pointer-during-b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
