net: enetc: initialize SW PIR and CIR based HW PIR and CIR values (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -548,6 +548,7 @@
 	patches.kernel.org/6.17.3-476-net-mlx5-fw-reset-add-reset-timeout-work.patch
 	patches.kernel.org/6.17.3-477-smb-client-fix-crypto-buffers-in-non-linear-me.patch
 	patches.kernel.org/6.17.3-478-bonding-fix-xfrm-offload-feature-setup-on-acti.patch
+	patches.kernel.org/6.17.3-479-net-enetc-initialize-SW-PIR-and-CIR-based-HW-P.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
