vdso: Add struct __kernel_old_timeval forward declaration to gettime.h (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -164,6 +164,7 @@
 	patches.kernel.org/6.17.3-092-vdso-datastore-Gate-time-data-behind-CONFIG_GE.patch
 	patches.kernel.org/6.17.3-093-PM-sleep-core-Clear-power.must_resume-in-noirq.patch
 	patches.kernel.org/6.17.3-094-blk-mq-fix-elevator-depth_updated-method.patch
+	patches.kernel.org/6.17.3-095-vdso-Add-struct-__kernel_old_timeval-forward-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
