--- a/series.conf
+++ b/series.conf
@@ -316,6 +316,7 @@
 	patches.kernel.org/6.17.3-244-scsi-pm80xx-Restore-support-for-expanders.patch
 	patches.kernel.org/6.17.3-245-scsi-pm80xx-Fix-array-index-out-of-of-bounds-o.patch
 	patches.kernel.org/6.17.3-246-scsi-libsas-Add-dev_parent_is_expander-helper.patch
+	patches.kernel.org/6.17.3-247-scsi-pm80xx-Use-dev_parent_is_expander-helper.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
