--- a/series.conf
+++ b/series.conf
@@ -595,6 +595,7 @@
 	patches.kernel.org/6.17.3-523-LoongArch-BPF-No-support-of-struct-argument-in.patch
 	patches.kernel.org/6.17.3-524-LoongArch-BPF-Don-t-align-trampoline-size.patch
 	patches.kernel.org/6.17.3-525-LoongArch-BPF-Make-trampoline-size-stable.patch
+	patches.kernel.org/6.17.3-526-LoongArch-BPF-Make-error-handling-robust-in-ar.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
