--- a/series.conf
+++ b/series.conf
@@ -478,6 +478,7 @@
 	patches.kernel.org/6.17.3-406-crypto-comp-Use-same-definition-of-context-all.patch
 	patches.kernel.org/6.17.3-407-crypto-hisilicon-qm-set-NULL-to-qm-debug.qm_di.patch
 	patches.kernel.org/6.17.3-408-wifi-ath12k-Fix-peer-lookup-in-ath12k_dp_mon_r.patch
+	patches.kernel.org/6.17.3-409-rpmsg-qcom_smd-Fix-fallback-to-qcom-ipc-parse.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
