--- a/series.conf
+++ b/series.conf
@@ -163,6 +163,7 @@
 	patches.kernel.org/6.17.3-091-selftests-bpf-Fix-count-write-in-testapp_xdp_m.patch
 	patches.kernel.org/6.17.3-092-vdso-datastore-Gate-time-data-behind-CONFIG_GE.patch
 	patches.kernel.org/6.17.3-093-PM-sleep-core-Clear-power.must_resume-in-noirq.patch
+	patches.kernel.org/6.17.3-094-blk-mq-fix-elevator-depth_updated-method.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
