drm/amdgpu: Fix jpeg v4.0.3 poison irq call trace on sriov guest (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -288,6 +288,7 @@
 	patches.kernel.org/6.17.3-216-drm-amd-display-Reduce-Stack-Usage-by-moving-a.patch
 	patches.kernel.org/6.17.3-217-drm-panel-novatek-nt35560-Fix-invalid-return-v.patch
 	patches.kernel.org/6.17.3-218-drm-amdgpu-fix-link-error-for-PM_SLEEP.patch
+	patches.kernel.org/6.17.3-219-drm-amdgpu-Fix-jpeg-v4.0.3-poison-irq-call-tra.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
