Bluetooth: btintel_pcie: Refactor Device Coredump (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -524,6 +524,7 @@
 	patches.kernel.org/6.17.3-452-net-macb-remove-illusion-about-TBQPH-RBQPH-bei.patch
 	patches.kernel.org/6.17.3-453-net-macb-move-ring-size-computation-to-functio.patch
 	patches.kernel.org/6.17.3-454-net-macb-single-dma_alloc_coherent-for-DMA-des.patch
+	patches.kernel.org/6.17.3-455-Bluetooth-btintel_pcie-Refactor-Device-Coredum.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
