--- a/series.conf
+++ b/series.conf
@@ -381,6 +381,7 @@
 	patches.kernel.org/6.17.3-309-wifi-mwifiex-send-world-regulatory-domain-to-d.patch
 	patches.kernel.org/6.17.3-310-wifi-brcmfmac-fix-43752-SDIO-FWVID-incorrectly.patch
 	patches.kernel.org/6.17.3-311-drm-msm-Do-not-validate-SSPP-when-it-is-not-re.patch
+	patches.kernel.org/6.17.3-312-PCI-tegra-Fix-devm_kcalloc-argument-order-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
