drm/display: bridge-connector: correct CEC bridge pointers in drm_bridge_connector_init (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -282,6 +282,7 @@
 	patches.kernel.org/6.17.3-210-mfd-max77705-Setup-the-core-driver-as-an-inter.patch
 	patches.kernel.org/6.17.3-211-drm-sched-Fix-a-race-in-DRM_GPU_SCHED_STAT_NO_.patch
 	patches.kernel.org/6.17.3-212-drm-panel-edp-Add-disable-to-100ms-for-MNB601L.patch
+	patches.kernel.org/6.17.3-213-drm-display-bridge-connector-correct-CEC-bridg.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
