ASoC: SOF: ipc4-pcm: fix start offset calculation for chain DMA (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -574,6 +574,7 @@
 	patches.kernel.org/6.17.3-502-ASoC-codecs-wcd937x-set-the-comp-soundwire-por.patch
 	patches.kernel.org/6.17.3-503-ASoC-codecs-wcd937x-make-stub-functions-inline.patch
 	patches.kernel.org/6.17.3-504-ASoC-SOF-ipc4-pcm-fix-delay-calculation-when-D.patch
+	patches.kernel.org/6.17.3-505-ASoC-SOF-ipc4-pcm-fix-start-offset-calculation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
