--- a/series.conf
+++ b/series.conf
@@ -188,6 +188,7 @@
 	patches.kernel.org/6.17.3-116-dts-arm-amlogic-fix-pwm-node-for-c3.patch
 	patches.kernel.org/6.17.3-117-soc-mediatek-mtk-svs-fix-device-leaks-on-mt818.patch
 	patches.kernel.org/6.17.3-118-soc-mediatek-mtk-svs-fix-device-leaks-on-mt819.patch
+	patches.kernel.org/6.17.3-119-cpuidle-qcom-spm-fix-device-and-OF-node-leaks-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
