--- a/series.conf
+++ b/series.conf
@@ -566,6 +566,7 @@
 	patches.kernel.org/6.17.3-494-ALSA-hda-realtek-Add-quirk-for-HP-Spectre-14t-.patch
 	patches.kernel.org/6.17.3-495-Squashfs-fix-uninit-value-in-squashfs_get_pare.patch
 	patches.kernel.org/6.17.3-496-uio_hv_generic-Let-userspace-take-care-of-inte.patch
+	patches.kernel.org/6.17.3-497-hisi_acc_vfio_pci-Fix-reference-leak-in-hisi_a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
