--- a/series.conf
+++ b/series.conf
@@ -257,6 +257,7 @@
 	patches.kernel.org/6.17.3-185-mfd-max77705-max77705_charger-move-active-disc.patch
 	patches.kernel.org/6.17.3-186-power-supply-max77705_charger-refactoring-rena.patch
 	patches.kernel.org/6.17.3-187-power-supply-max77705_charger-use-regfields-fo.patch
+	patches.kernel.org/6.17.3-188-power-supply-max77705_charger-rework-interrupt.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
