f2fs: fix to clear unusable_cap for checkpoint=enable (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -321,6 +321,7 @@
 	patches.kernel.org/6.17.3-249-scsi-pm80xx-Fix-pm8001_abort_task-for-chip_800.patch
 	patches.kernel.org/6.17.3-250-mptcp-Fix-up-subflow-s-memcg-when-CONFIG_SOCK_.patch
 	patches.kernel.org/6.17.3-251-scsi-myrs-Fix-dma_alloc_coherent-error-check.patch
+	patches.kernel.org/6.17.3-252-f2fs-fix-to-clear-unusable_cap-for-checkpoint-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
