--- a/series.conf
+++ b/series.conf
@@ -218,6 +218,7 @@
 	patches.kernel.org/6.17.3-146-mmc-core-Fix-variable-shadowing-in-mmc_route_r.patch
 	patches.kernel.org/6.17.3-147-arm64-dts-mediatek-mt6795-xperia-m5-Fix-mmc0-l.patch
 	patches.kernel.org/6.17.3-148-arm64-dts-mediatek-mt7986a-Fix-PCI-Express-T-P.patch
+	patches.kernel.org/6.17.3-149-arm64-dts-mediatek-mt8395-kontron-i1200-Fix-MT.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
