--- a/series.conf
+++ b/series.conf
@@ -129,6 +129,7 @@
 	patches.kernel.org/6.17.3-057-cpufreq-scmi-Account-for-malformed-DT-in-scmi_.patch
 	patches.kernel.org/6.17.3-058-arm64-dts-renesas-sparrow-hawk-Invert-microSD-.patch
 	patches.kernel.org/6.17.3-059-arm64-dts-renesas-sparrow-hawk-Set-VDDQ18_25_A.patch
+	patches.kernel.org/6.17.3-060-libbpf-Export-bpf_object__prepare-symbol.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
