wifi: ath12k: Fix flush cache failure during RX queue update (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -488,6 +488,7 @@
 	patches.kernel.org/6.17.3-416-remoteproc-qcom-q6v5-Avoid-disabling-handover-.patch
 	patches.kernel.org/6.17.3-417-remoteproc-qcom-pas-Shutdown-lite-ADSP-DTB-on-.patch
 	patches.kernel.org/6.17.3-418-wifi-ath12k-Refactor-RX-TID-deletion-handling-.patch
+	patches.kernel.org/6.17.3-419-wifi-ath12k-Fix-flush-cache-failure-during-RX-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
