--- a/series.conf
+++ b/series.conf
@@ -554,6 +554,7 @@
 	patches.kernel.org/6.17.3-482-NFSD-filecache-add-STATX_DIOALIGN-and-STATX_DI.patch
 	patches.kernel.org/6.17.3-483-nfs-localio-avoid-issuing-misaligned-IO-using-.patch
 	patches.kernel.org/6.17.3-484-octeontx2-vf-fix-bitmap-leak.patch
+	patches.kernel.org/6.17.3-485-octeontx2-pf-fix-bitmap-leak.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
