--- a/series.conf
+++ b/series.conf
@@ -203,6 +203,7 @@
 	patches.kernel.org/6.17.3-131-blk-mq-fix-potential-deadlock-while-nr_request.patch
 	patches.kernel.org/6.17.3-132-arm64-dts-allwinner-a527-cubie-a5e-Add-etherne.patch
 	patches.kernel.org/6.17.3-133-arm64-dts-allwinner-t527-avaota-a1-Add-etherne.patch
+	patches.kernel.org/6.17.3-134-arm64-dts-rockchip-Add-RTC-on-rk3576-evb1-v10.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
