drm/msm: Do not validate SSPP when it is not ready (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -380,6 +380,7 @@
 	patches.kernel.org/6.17.3-308-wifi-mac80211-Make-CONNECTION_MONITOR-optional.patch
 	patches.kernel.org/6.17.3-309-wifi-mwifiex-send-world-regulatory-domain-to-d.patch
 	patches.kernel.org/6.17.3-310-wifi-brcmfmac-fix-43752-SDIO-FWVID-incorrectly.patch
+	patches.kernel.org/6.17.3-311-drm-msm-Do-not-validate-SSPP-when-it-is-not-re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
