tls: Use __sk_dst_get() and dst_dev_rcu() in get_netdev_for_sock() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -450,6 +450,7 @@
 	patches.kernel.org/6.17.3-378-smc-Use-__sk_dst_get-and-dst_dev_rcu-in-in-smc.patch
 	patches.kernel.org/6.17.3-379-smc-Use-__sk_dst_get-and-dst_dev_rcu-in-smc_cl.patch
 	patches.kernel.org/6.17.3-380-smc-Use-__sk_dst_get-and-dst_dev_rcu-in-smc_vl.patch
+	patches.kernel.org/6.17.3-381-tls-Use-__sk_dst_get-and-dst_dev_rcu-in-get_ne.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
