HID: steelseries: Fix STEELSERIES_SRWS1 handling in steelseries_remove() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -415,6 +415,7 @@
 	patches.kernel.org/6.17.3-343-RDMA-mlx5-Fix-page-size-bitmap-calculation-for.patch
 	patches.kernel.org/6.17.3-344-netfilter-ipset-Remove-unused-htable_bits-in-m.patch
 	patches.kernel.org/6.17.3-345-ipvs-Use-READ_ONCE-WRITE_ONCE-for-ipvs-enable.patch
+	patches.kernel.org/6.17.3-346-HID-steelseries-Fix-STEELSERIES_SRWS1-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
