selftests/mm: skip soft-dirty tests when CONFIG_MEM_SOFT_DIRTY is disabled (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -609,6 +609,7 @@
 	patches.kernel.org/6.17.3-537-KVM-SVM-Skip-fastpath-emulation-on-VM-Exit-if-.patch
 	patches.kernel.org/6.17.3-538-fbdev-simplefb-Fix-use-after-free-in-simplefb_.patch
 	patches.kernel.org/6.17.3-539-mm-hugetlb-avoid-soft-lockup-when-mprotect-to-.patch
+	patches.kernel.org/6.17.3-540-selftests-mm-skip-soft-dirty-tests-when-CONFIG.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
