vfio/pds: replace bitmap_free with vfree (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -474,6 +474,7 @@
 	patches.kernel.org/6.17.3-402-sparc-fix-accurate-exception-reporting-in-copy.patch
 	patches.kernel.org/6.17.3-403-sparc-fix-accurate-exception-reporting-in-copy.patch
 	patches.kernel.org/6.17.3-404-sparc-fix-accurate-exception-reporting-in-copy.patch
+	patches.kernel.org/6.17.3-405-vfio-pds-replace-bitmap_free-with-vfree.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
