--- a/series.conf
+++ b/series.conf
@@ -376,6 +376,7 @@
 	patches.kernel.org/6.17.3-304-drm-amd-pm-Adjust-si_upload_smc_data-register-.patch
 	patches.kernel.org/6.17.3-305-drm-amd-pm-Treat-zero-vblank-time-as-too-short.patch
 	patches.kernel.org/6.17.3-306-drm-amd-pm-Disable-MCLK-switching-with-non-DC-.patch
+	patches.kernel.org/6.17.3-307-drm-amd-pm-Disable-SCLK-switching-on-Oland-wit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
